<resources>
    <string name="app_name">SIPIL</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_task">ViewTaskActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="forgot_pwd">
        <u>Forgot Password?</u>
    </string>

    <string name="hello_world">Hello Square World!</string>
    <string name="already_have_a_account">Already have an account? \n Sign in Here</string>
    <string name="work_flow_mang_tool">Workflow Management Tool</string>
    <string name="title_activity_base">Orgnizations</string>
    <string name="toolbar_title_create_org">Create Organization</string>
    <string name="toolbar_title_update_profile">Update Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="d_open">Open</string>
    <string name="d_close">Close</string>

    <string name="menu_update_profile">Update Profile</string>
    <string name="menu_myorg">My Organizations</string>
    <string name="menu_projects">My Projects</string>
    <string name="menu_adduser">Add User</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_logout">Logout</string>
    <string name="create_organization">Create</string>
    <string name="org_address1">Address Line1</string>
    <string name="org_address2">Address Line2</string>
    <string name="org_pincode">Pincode</string>
    <string name="org_city">City</string>
    <string name="organization_email">Organization email</string>
    <string name="name_of_the_organization">Name of the Organization</string>
    <string name="create_your_organization">Create Your Organization</string>
    <string name="frst_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_your_project">Create your Project</string>
    <string name="add_user">Add user</string>
    <string name="add_store">Add Store</string>
    <string name="add_machine_invoice">Add Machine Invoice</string>
    <string name="add_material_invoice">Add Material Invoice</string>
    <string name="machines_store">Machines Store</string>

    <string-array name="roles">
        <item>S.E</item>
        <item>P.E</item>
        <item>S.O</item>
        <item>M.O</item>
    </string-array>

    <string-array name="user_roles">
        <item>Admin</item>
        <item>Planning Engineer</item>
        <item>Site Engineer</item>
        <item>Store Keeper</item>
        <item>Store Manager</item>
    </string-array>
</resources>