<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_update_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_update_profile" />
        <item
            android:id="@+id/nav_myorg"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_myorg" />
        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_projects" />
        <item
            android:id="@+id/nav_adduser"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/add_user"
            android:visible="true" />
       <!-- <item
            android:id="@+id/nav_machies_store"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/machines_store"
            android:visible="false" />-->
        <item
            android:id="@+id/nav_add_machine_invoice"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/add_machine_invoice"
            android:visible="false" />
        <item
            android:id="@+id/nav_add_material_invoice"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/add_material_invoice"
            android:visible="false" />


        <item
            android:id="@+id/nav_addstore"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/add_store"
            android:visible="false" />

        <item
            android:id="@+id/nav_chagepwd"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_change_password" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_logout" />
    </group>
</menu>