<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/clrWhite"
        tools:context=".ui.home.organization.AddOrganizationActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_anchor="@+id/progress_bar"
            app:layout_anchorGravity="end|bottom">

            <ImageView
                android:id="@+id/image_view_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@drawable/app_icon" />

            <!--  <LinearLayout
                  android:id="@+id/linearLayout1"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/image_view_logo"
                  android:orientation="vertical">

                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_horizontal"
                      android:visibility="gone"
                      android:text="Workflow management tool"
                      android:textAppearance="@style/TextAppearance.AppCompat.Large"
                      android:textColor="#465A61"
                      app:fontFamily="serif-monospace" />
                  &lt;!&ndash;
                                  <TextView
                                          android:layout_width="wrap_content"
                                          android:layout_height="wrap_content"
                                          android:layout_gravity="center_horizontal"
                                          android:text="MVVM"
                                          android:textAllCaps="false"
                                          android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                                          android:textColor="#969EEE"
                                          android:textStyle="bold"
                                          android:typeface="monospace"
                                          app:fontFamily="casual" />
                  &ndash;&gt;
              </LinearLayout>-->

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="18dp">

                <TextView
                    android:id="@+id/pageheading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/create_your_organization"
                    android:textAlignment="center"
                    android:textColor="@color/clrWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_text_organization_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/edit_text_round_gray_background"
                    android:drawableLeft="@drawable/ic_outline_person_24"
                    android:drawablePadding="16dp"
                    android:hint="@string/name_of_the_organization"
                    android:inputType="textEmailAddress"
                    android:padding="12dp" />

                <EditText
                    android:id="@+id/edit_text_organization_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/edit_text_round_gray_background"
                    android:drawableLeft="@drawable/ic_outline_email_24"
                    android:drawablePadding="16dp"
                    android:hint="@string/organization_email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp" />

                <EditText
                    android:id="@+id/edit_text_organization_address_one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:visibility="gone"
                    android:background="@drawable/edit_text_round_gray_background"
                    android:drawableLeft="@drawable/ic_outline_location_city_24"
                    android:drawablePadding="16dp"
                    android:hint="@string/org_address1"
                    android:inputType="textEmailAddress"
                    android:padding="12dp" />

                <EditText
                    android:id="@+id/edit_text_organization_address_two"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/edit_text_round_gray_background"
                    android:drawableLeft="@drawable/ic_outline_location_city_24"
                    android:drawablePadding="16dp"
                    android:hint="@string/org_address2"
                    android:inputType="textEmailAddress"
                    android:padding="12dp" />

                <EditText
                    android:id="@+id/edit_text_organization_city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/edit_text_round_gray_background"
                    android:drawableLeft="@drawable/ic_outline_location_city_24"
                    android:drawablePadding="16dp"
                    android:hint="@string/org_city"
                    android:inputType="textEmailAddress"
                    android:padding="12dp" />

                <EditText
                    android:id="@+id/edit_text_organization_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:visibility="gone"
                    android:background="@drawable/edit_text_round_gray_background"
                    android:drawableLeft="@drawable/ic_baseline_person_pin_circle_24"
                    android:drawablePadding="16dp"
                    android:hint="@string/org_pincode"
                    android:inputType="textEmailAddress"
                    android:padding="12dp" />

                <!-- Logo upload and other fields one thinks are necessary-->

                <Button
                    android:id="@+id/button_add_organization"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_rounded_corners"
                    android:clickable="true"
                    android:text="@string/create_organization"
                    android:textAllCaps="false"
                    android:textColor="@color/clrWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:visibility="invisible" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>



