<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/clrLightBlue"
        tools:context=".ui.auth.SignupActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/image_view_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:background="@drawable/app_icon" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:text="@string/work_flow_mang_tool"
                android:textColor="@color/clrWhite"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/et_su_frst_name"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_round_gray_background"
                android:drawableLeft="@drawable/ic_name"
                android:drawablePadding="16dp"
                android:hint="@string/frst_name"
                android:inputType="text"
                android:padding="12dp" />


            <EditText
                android:id="@+id/et_su_last_name"
                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_round_gray_background"
                android:drawableLeft="@drawable/ic_name"
                android:drawablePadding="16dp"
                android:hint="@string/last_name"
                android:inputType="text"
                android:padding="12dp" />


            <EditText
                android:id="@+id/et_su_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_round_gray_background"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="16dp"
                android:hint="sipil@gmail.com"
                android:inputType="textEmailAddress"
                android:padding="12dp" />

            <EditText
                android:id="@+id/et_su_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_round_gray_background"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="16dp"
                android:hint="password"
                android:inputType="textPassword"
                android:padding="12dp" />

            <EditText
                android:id="@+id/edit_text_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:visibility="gone"
                android:background="@drawable/edit_text_round_gray_background"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="16dp"
                android:hint="confirm password"
                android:inputType="textPassword"
                android:padding="12dp" />

            <TextView
                android:id="@+id/text_view_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/forgot_pwd"
                android:textStyle="bold"
                 android:textColor="@color/clrWhite"/>

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Sign Up"
                android:textColor="@color/clrWhite"
                android:textStyle="bold"
                android:textSize="20sp"
                android:background="@drawable/btn_rounded_corners"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/text_view_login"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_below="@id/linearLayout2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/already_have_a_account"
                android:textAlignment="center"
                android:textColor="@color/clrWhite"
                android:textStyle="bold"
                android:textSize="15sp" />

        </LinearLayout>


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:visibility="invisible" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>




